
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
byteorder = "1.3"
solana-sdk = { version = "=1.1.1", default-features = false, features=["program"] }
solana-sdk-bpf-test = { path = "../../node_modules/@solana/web3.js/bpf-sdk/rust/test", default-features = false }

[lib]
name = "solana_bpf_helloworld"
crate-type = ["cdylib", "lib"]
